@@ -86,3 +86,34 @@
                   0 15 15 15 15 15 15 15 15 15 15 15 15 15 15 15 15 15 15 15 15 15
                   ;;      (  1  +     x  )  )
                   0 15 15 15 15 15 15 15 15 15)))
+
+(sb-cover:clear-coverage)
+(compile-load "test-data-comma")
+(assert (equalp (get-states "test-data-comma")
+                ;;( i n - p a c k a g e   s b - c o v e r - t e s t )
+                #(1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1
+                  0
+                  ;;( d e f u n   c o m m a   ( x )
+                  0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1
+                  ;;    ` ( 0   1   , ( 1 +   x )   3   .   , ( i f   (  e  v  e  n  p     x  )    ( l i s t   4 )   ( l i s t   5 ) ) ) )
+                  0 1 1 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 10 10 10 10 10 10 10 10 10 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 1)))
+
+(comma 1)
+(assert (equalp (get-states "test-data-comma")
+                ;;( i n - p a c k a g e   s b - c o v e r - t e s t )
+                #(1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1
+                  0
+                  ;;( d e f u n   c o m m a   ( x )
+                  0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1
+                  ;;    ` ( 0   1   , ( 1 +   x )   3   .   , ( i f   ( e v e n p   x )   ( l i s t   4 )   ( l i s t   5 ) ) ) )
+                  0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 6 6 6 6 6 6 6 6 6 1 2 2 2 2 2 2 2 2 1 1 1 1 1 1 1 1 1 1 1 1)))
+
+(comma 2)
+(assert (equalp (get-states "test-data-comma")
+                ;;( i n - p a c k a g e   s b - c o v e r - t e s t )
+                #(1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1
+                  0
+                  ;;( d e f u n   c o m m a   ( x )
+                  0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1
+                  ;;    ` ( 0   1   , ( 1 +   x )   3   .   , ( i f   ( e v e n p   x )   ( l i s t   4 )   ( l i s t   5 ) ) ) )
+                  0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 5 5 5 5 5 5 5 5 5 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1)))
