@@ -206,21 +206,30 @@
       (let ((form root)
             (current (rest rpath)))
         (loop
-         (when (comma-p form)
-           (setf form (comma-expr form)))
-         (when (atom form)
+         (loop
+          (unless (comma-p form)
             (return))
-          (let ((head (first form)))
-            (when (symbolp head)
-              (let ((name (symbol-name head)))
-                (when (and (>= (length name) 3) (string= name "DEF" :end1 3))
-                  (context (source-form-context form))))))
-          (when (null current) (return))
-         (let ((cons (nthcdr (pop current) form)))
-           (setq form (if (comma-p cons)
-                          (comma-expr cons)
-                          (car cons)))))
-
+            ;; (... ,<expr> ...) -> (... (unquote <expr>) ...)
+          (aver (= (pop current) 1))
+          (setq form (comma-expr form)))
+         (when (atom form)
+           (return))
+         (let ((head (first form)))
+           (when (symbolp head)
+             (let ((name (symbol-name head)))
+               (when (and (>= (length name) 3) (string= name "DEF" :end1 3))
+                 (context (source-form-context form))))))
+         (when (null current)
+           (return))
+         (let ((count (pop current))
+               (next form))
+           (dotimes (i count)
+             (cond
+               ((comma-p next)
+                ;; (... . ,<expr>) -> (... . (unquote <expr>)) -> (... unquote <expr>)
+                (setq next (list (comma-expr next))))
+               (t (setq next (cdr next)))))
+           (setq form (car next))))
         (cond ((context)
                (values form (context)))
               ((and path root)
